--- a/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
+++ b/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
@@ -15,13 +15,13 @@
         </wl-admin-crud>
         
         
-        <label class="texto_labels">Nombre del tipo entidad</label>
+        <label class="texto_labels">{{vm.language.strings.NombreTipoEntidad}}</label>
         <form>
             <input class="a_input"
-                   ng-disabled="!vm.editando" 
-                   type="text" 
-                   ng-model="vm.tipoEntidadSeleccionado.nombre" 
-                   placeholder="Ingrese el nombre Entidad" />
+                   ng-disabled="!vm.editando"
+                   type="text"
+                   ng-model="vm.tipoEntidadSeleccionado.nombre"
+                   placeholder="{{vm.language.strings.IngreseNombreEntidad}}" />
         </form>
         <wl-lista-tipo-doc-hojitas editando="vm.editando"
                 lista-documentos="vm.tiposDocumentos">
