--- a/WebLegemClient/src/app/gestion-documental/anotacion/crear-anotacion.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/anotacion/crear-anotacion.tmpl.html
@@ -1,7 +1,7 @@
 ﻿<div class="box_father animatio ng-enter">
     <div class="box_right">
         <label class="texto_labels bold">
-            Crear Anotacion
+           {{vm.language.strings.CrearAnotacion}} 
         </label>
         <hr class="divisor_gestion_documental" />
 
