--- a/WebLegemClient/src/app/gestion-documental/anotacion/pregunta-añadir-anotaciones.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/anotacion/pregunta-añadir-anotaciones.tmpl.html
@@ -1,13 +1,13 @@
 ﻿<form>
     <fieldset>
-        <legend>¿Desea añadir anotaciones a este documento?</legend>
+        <legend>{{vm.language.strings.DeseaAñadirAnotacionesDocumento}}</legend>
 
         <div>
-            <label class="a_inline" for="si">Si</label>
+            <label class="a_inline" for="si">{{vm.language.strings.Si}}</label>
             <input class="a_inline" type="radio" name="añadir" id="si" />
         </div>
         <div class="a_inline">
-            <label for="no">No</label>
+            <label for="no">{{vm.language.strings.No}}</label>
             <input type="radio" name="añadir" id="no" />
         </div>
     </fieldset>
