--- a/WebLegemClient/src/app/gestion-documental/documento/asunto.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/asunto.tmpl.html
@@ -1,14 +1,14 @@
 ﻿<div class="contenido_gd animatio ng-enter" id="holas">
-    <label class="titulo">Crear Documento</label>
+    <label class="titulo">{{vm.language.strings.CrearDocumento}}</label>
     <div>
         <label class="subtitulos_labels">
-            Asunto
+            {{vm.language.strings.Asunto}}
         </label>
         <hr class="divisor_gestion_documental" />
         <div style="display:flex;flex-direction:column; justify-content:center; text-align:center;"
             ng-show="vm.documento.asunto.length < 2">
             <div class="loader" id="loader"></div>
-            <p class="texto_labels">Procesando archivo...</p>
+            <p class="texto_labels">{{vm.language.strings.ProcesandoArchivo}}</p>
         </div>
         <form class="tontera" ng-show="vm.documento.asunto.length > 2">
 
@@ -19,10 +19,10 @@
         </form>
         <div class="contenedor_back_next">
             <button class="btn_con_ico" ui-sref="gestion-documental.crear-documento.informacion-documento">
-                <span class="ico-chevron-left tamano_botones_1"></span>Atras
+                <span class="ico-chevron-left tamano_botones_1"></span>{{vm.language.strings.Atras}}
             </button>
             <button class="btn_con_ico inverso" ng-click="vm.aceptar()">
-                Siguiente<span class="ico-chevron-right tamano_botones_1 derecha"></span>
+                {{vm.language.strings.Siguiente}}<span class="ico-chevron-right tamano_botones_1 derecha"></span>
             </button>
         </div>
     </div>
