--- a/WebLegemClient/src/app/gestion-documental/documento/crear-documento.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/crear-documento.tmpl.html
@@ -7,7 +7,7 @@
             <ul>
                 <li class="active_tab">
                     <span class="ico-file-o">
-                        <a>Crear Documento</a>
+                        <a>{{vm.language.strings.CrearDocumento}}</a>
                     </span>
                 </li>
             </ul>
