--- a/WebLegemClient/src/app/gestion-documental/documento/subir-archivo.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/subir-archivo.tmpl.html
@@ -2,16 +2,16 @@
     <div class="box_right">
 
         <label class="texto_labels bold">
-            Subir Documento
+            {{vm.language.strings.SubirDocumento}}
         </label>
         <hr class="divisor_gestion_documental" />
 
-        <form style="padding:0 20px;">
+        <form class="contenedor_uploader_gddasdas">
             <label class="uploader" id="fileOutput" nv-file-drop uploader="vm.uploader">
                 <span id="ico_no_cargado" class="icon ico-upload"></span>
                 <span id="ico_cargado" class="icon ico-check"></span>
 
-                <label><b>Escoga un archivo</b> ó arrastrelo aquí.</label>
+                <label><b>{{vm.language.strings.EscogaUnArchivo}}</b> {{vm.language.strings.ArrastreloAqui}}</label>
                 <label id="fileSize"></label>
                 <label id="fileType"></label>
                 <input type="file" id="files" accept="*/*" nv-file-select nv-file-drop uploader="vm.uploader" />
@@ -21,7 +21,7 @@
 
             <button id="cancelar_lectura" type="button" class="btn_con_ico" ng-click="an.abortRead()">
                 <!--ng-click="vm.uploader.uploadAll()"-->
-                <span class="ico-times tamano_botones_1"></span>Cancelar
+                <span class="ico-times tamano_botones_1"></span>{{vm.language.strings.Cancelar}}
             </button>
             <br />
         </form>
@@ -35,13 +35,13 @@
         <div class="divisor-pasos"><div></div></div>
         <div class="controles-crear-anotacion">
             <button class="btn_con_ico inverso" ui-sref="gestion-documental.crear-documento.informacion-documento">
-                Siguiente<span class="ico-chevron-right tamano_botones_1 derecha"></span>
+                {{vm.language.strings.Siguiente}}<span class="ico-chevron-right tamano_botones_1 derecha"></span>
             </button>
             <button class="btn_con_ico inverso" ui-sref="gestion-documental.crear-documento.crear-anotacion">
-                Anotacion<span class="ico-chevron-right tamano_botones_1 derecha"></span>
+                {{vm.language.strings.Anotacion}}<span class="ico-chevron-right tamano_botones_1 derecha"></span>
             </button>
             <button class="btn_con_ico inverso" ui-sref="gestion-documental.crear-documento.seleccionar-anotacion">
-                Existe anota<span class="ico-chevron-right tamano_botones_1 derecha"></span>
+                {{vm.language.strings.ExisteAnota}}<span class="ico-chevron-right tamano_botones_1 derecha"></span>
             </button>
         </div>
     </div>
