--- a/WebLegemClient/src/common/components/wl-confirmacion/wl-confirmacion.tmpl.html
+++ b/WebLegemClient/src/common/components/wl-confirmacion/wl-confirmacion.tmpl.html
@@ -4,13 +4,13 @@
             style="display:inline-block;"
             ng-show="vm.editando"
             ng-click="vm.aceptar()">
-        <span class="ico-floppy-o tamano_botones_1"></span>Aceptar
+        <span class="ico-floppy-o tamano_botones_1"></span>{{vm.language.strings.Aceptar}}
     </button>
     <button class="btn_con_ico"
             ng-show="vm.editando"
             type="button"
             style="display:inline-block;"
             ng-click="vm.cancelar()">
-        <span class="ico-times tamano_botones_1"></span>Cancelar
+        <span class="ico-times tamano_botones_1"></span>{{vm.language.strings.Cancelar}}
     </button>
 </div>
