--- a/WebLegemClient/src/common/components/wl-lista-entidades/wl-lista-entidades.tmpl.html
+++ b/WebLegemClient/src/common/components/wl-lista-entidades/wl-lista-entidades.tmpl.html
@@ -1,5 +1,5 @@
 ﻿<div>
-    <label class="texto_labels" style="margin-top:10px;">Lista de entidades</label>
+    <label class="texto_labels" style="margin-top:10px;">{{vm.language.strings.ListaEntidades}}</label>
     <input type="text" ng-model="vm.filtro" class="a_input" />
 
     <ul class="a_listado" style="width:100%;">
