--- a/WebLegemClient/src/common/components/wl-lista-roles/wl-lista-roles.tmpl.html
+++ b/WebLegemClient/src/common/components/wl-lista-roles/wl-lista-roles.tmpl.html
@@ -6,7 +6,7 @@
         </button>
     </div>
 
-    <p class="texto_labels green bold">Roles</p>
+    <p class="texto_labels green bold">{{vm.language.strings.Roles}}</p>
 
     <ul class="a_listado" style="width:100%;">
         <li ng-repeat="rol in vm.lista | filter:vm.filtro">
