--- a/WebLegemClient/src/css/elementos/uploader.css
+++ b/WebLegemClient/src/css/elementos/uploader.css
@@ -4,7 +4,7 @@
  
 .uploader {
     align-items: center;
-    background-color: #cccccc;
+    background-color: #ddd;
     display: flex;
     cursor:pointer;
 
