--- a/WebLegemClient/src/app/anotacion/editar-anotacion/editar-anotacion.tmpl.html
+++ b/WebLegemClient/src/app/anotacion/editar-anotacion/editar-anotacion.tmpl.html
@@ -3,11 +3,11 @@
 <!---------------------------------------------------------------------------------------------------------------------Paso1-->
 <div class="box_father" ng-show="vm.index==0">
     <div class="box_left">
-        <label class="ca_label_busqueda">Buscar documento:</label>
+        <label class="ca_label_busqueda">{{vm.language.strings.BuscarDocumento}}:</label>
         <wl-buscar-doc>  </wl-buscar-doc>
     </div>
     <div class="box_right">
-        <label class="msj-error"> No se encontro ningun documento con esa identificacion </label>
+        <label class="msj-error"> {{vm.language.strings.NoEncontroNingunDocumentoConIdentificacion}} </label>
         <wl-lista-doc-encontrado>  </wl-lista-doc-encontrado>
 
         
@@ -18,7 +18,7 @@
 <div class="box_father" ng-show="vm.index==1">
 
     <div class="box_left flex-3" ng-show="vm.ban_ver_pdf">
-        <label class="ca_label_busqueda">Vista previa del documento:</label>
+        <label class="ca_label_busqueda">{{vm.language.strings.VistaPreviaDocumento}}:</label>
         <iframe ng-show="vm.togglePdf=true"
                 src="http://docs.google.com/gview?url=http://victorpimentel.com/stuff/rubik.pdf&embedded=true"
                 class="de-vpdf none-mt" frameborder="0"></iframe>
@@ -31,14 +31,14 @@
 
         <div class="box_duo_input">
             <div>
-                <label class="texto_labels">Tipo de Anotación:</label>
+                <label class="texto_labels">{{vm.language.strings.TipoAnotacion}}:</label>
                 <div class="a_select">
-                    <select type="text" placeholder="Escriba entidad emisora" ng-model="vm.tipoDocumentoAux"
+                    <select type="text" placeholder="{{vm.language.strings.EscribaEntidadEmisora}}" ng-model="vm.tipoDocumentoAux"
                             ng-options="tipoDocumento.nombre as tipoDocumento.nombre for tipoDocumento in vm.tiposDocumento| orderBy: 'nombre'"></select>
                 </div>
             </div>
             <div>
-                <label class="texto_labels">Descripcion de la Anotación:</label>
+                <label class="texto_labels">{{vm.language.strings.DescripcionAnotacion}}:</label>
                 <textarea class="a_text_area"></textarea>
             </div>
         </div>
@@ -54,18 +54,18 @@
             <button class="btn_toggle vista-previa-ed"
                     ng-class="vm.ban_ver_pdf? 'activo' :''"
                     ng-click="vm.ban_ver_pdf = !vm.ban_ver_pdf" ng-show="vm.index==1">
-                Vista Previa
+                {{vm.language.strings.VistaPrevia}}
             </button>
             <span class="span-fill"> </span>
 
             <button class="btn_sin_ico" ng-click="vm.backStep()" ng-hide="vm.index==0">
-                Atras
+                {{vm.language.strings.Atras}}
             </button>
             <button class="btn_sin_ico" ng-click="vm.nextStep()" ng-hide="vm.index==1">
-                Siguiente
+                {{vm.language.strings.Siguiente}}
             </button>
             <button class="btn_sin_ico" ng-click="vm.ban_exito_edicion=true" ng-show="vm.index==1">
-                Guardar Cambios
+                {{vm.language.strings.GuardarCambios}}
             </button>
         </div>
     </div>
@@ -74,7 +74,7 @@
     <wl-info show="vm.ban_exito_edicion" title="Exito">
         <div class="a-modal-contenido">
             <span class="ico-check-circle verde"></span>
-            <div>Se guardaron los cambion con exito </div>
+            <div>  {{vm.language.strings.SeGuardaronCambiosExito}}</div>
         </div>
     </wl-info>
 
