--- a/WebLegemClient/src/app/gestion-documental/documento/informacion-documento.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/informacion-documento.tmpl.html
@@ -1,14 +1,14 @@
 ﻿<div class="box_father animatio ng-enter">
     <div class="box_right">
         <label class="texto_labels bold">
-            Identificacion del documento
+            {{vm.language.strings.IdentificacionDocumento}}
         </label>
         <hr class="divisor_gestion_documental" />
 
             <table class="tabla_info_doc">
                 <!------------------------------------------------------------------------------------------------------------------------------------------------>
                 <tr>
-                    <td><label class="texto_labels" for="entidad" ng-model="vm.documento.entidad">Entidad:</label></td>
+                    <td><label class="texto_labels" for="entidad" ng-model="vm.documento.entidad">{{vm.language.strings.Entidad}}:</label></td>
                     <td>
                         <div class="a_select">
                             <select id="entidad" ng-model="vm.documento.entidad"
@@ -18,7 +18,7 @@
                 </tr>
                 <!------------------------------------------------------------------------------------------------------------------------------------------------>
                 <tr>
-                    <td><label class="texto_labels" for="tipo-documento">Tipo de Documento:</label></td>
+                    <td><label class="texto_labels" for="tipo-documento">{{vm.language.strings.TipoDocumento}}:</label></td>
                     <td>
                         <div class="a_select">
                             <select id="tipo-documento" ng-model="vm.documento.tipoDocumento"
@@ -28,13 +28,13 @@
                 </tr>
                 <!------------------------------------------------------------------------------------------------------------------------------------------------>
                 <tr>
-                    <td><label class="texto_labels" for="numero">Numero:</label></td>
+                    <td><label class="texto_labels" for="numero">{{vm.language.strings.Numero}}:</label></td>
                     <td>
                         <input class="a_input " type="text" id="numero" ng-model="vm.documento.numero" />
                     </td>
                 </tr>
                 <tr>
-                    <td><label class="texto_labels" for="año">Fecha Publicación:</label></td>
+                    <td><label class="texto_labels" for="año">{{vm.language.strings.FechaPublicacion}}:</label></td>
                     <td>
                         <input class="a_input" type="date" id="exampleInput" name="input" ng-model="vm.documento.fechaPublicacion"
                                placeholder="yyyy-MM-dd" min="2013-01-01" max="2020-12-31" required />
@@ -51,10 +51,10 @@
         <div class="divisor-pasos"><div></div></div>
         <div class="controles-crear-anotacion">
             <button class="btn_con_ico" ui-sref="gestion-documental.crear-documento.subir-archivo">
-                <span class="ico-chevron-left tamano_botones_1"></span>Atras
+                <span class="ico-chevron-left tamano_botones_1"></span>{{vm.language.strings.Atras}}
             </button>
             <button class="btn_con_ico inverso" ng-click="vm.validarDocumento()">
-                Siguiente<span class="ico-chevron-right tamano_botones_1 derecha"></span>
+                {{vm.language.strings.Siguiente}}<span class="ico-chevron-right tamano_botones_1 derecha"></span>
             </button>
         </div>
         <!--<p>{{ vm.error }}</p> creo q no sirve pa nada -->
