--- a/WebLegemClient/src/app/usuarios/usuarios.tmpl.html
+++ b/WebLegemClient/src/app/usuarios/usuarios.tmpl.html
@@ -1,6 +1,6 @@
 ﻿<div class="tapiz">
 
-    <div style="height:100px;"></div>
+    <div style="height:85px;"></div>
 
     <div class="tapiz_contenido">
 
@@ -10,13 +10,13 @@
                         ng-class="vm.$state.current.name =='usuarios.control-roles' ? 'active_tab' : ''"
                         ng-click="vm.tabActivo($event);">
                     <span class="ico-cogs">
-                        <a>ROLES</a>
+                        <a>{{vm.language.strings.Roles}}</a>
                     </span>
                 </li>
                 <li ui-sref="usuarios.control-usuarios" ng-click="vm.activo($event);"
                         ng-class="vm.$state.current.name =='usuarios.control-usuarios' ? 'active_tab' : ''">
                     <span class="ico-users">
-                        <a>USUARIOS</a>
+                        <a>{{vm.language.strings.Usuarios}}</a>
                     </span>
                 </li>                
             </ul>
