--- a/WebLegemClient/src/common/components/wl-lista-permisos/wl-lista-permisos.tmpl.html
+++ b/WebLegemClient/src/common/components/wl-lista-permisos/wl-lista-permisos.tmpl.html
@@ -1,7 +1,7 @@
 ﻿<div class="contenedor_permisos" ng-repeat="modulo in vm.modulos">
     <div class="titulo_modulo">
         <p class="texto_labels">{{ modulo.nombre }}</p>
-        <p class="estado_permiso">Permitir todo</p>
+        <p class="estado_permiso">{{vm.language.strings.PermitirTodo}}</p>
         <div class="switch_container">
             <input type="checkbox" id="switch1" name="switch1"
                    class="switch" />
@@ -12,7 +12,7 @@
     <div class="permiso_submodulo" ng-repeat="permiso in vm.permisosAsignados | filter:modulo.nombre ">
         <hr ng-if="permiso.id % 4 === 0" />
         <p>{{ permiso.accion.nombre }} {{ permiso.recurso.nombre }}</p>
-        <p class="estado_permiso">No permitido</p>
+        <p class="estado_permiso">{{vm.language.strings.NoPermitido}}</p>
 
         <div id="switch_container" class="checkbox_container">
             <input  id="sw_permisos_{{permiso.id}}"
