--- a/WebLegemClient/src/common/components/wl-lista-tipos-entidad/wl-lista-tipos-entidad.tmpl.html
+++ b/WebLegemClient/src/common/components/wl-lista-tipos-entidad/wl-lista-tipos-entidad.tmpl.html
@@ -1,5 +1,5 @@
 ﻿<div>
-    <label class="texto_labels" style="margin-top:10px;">Lista de tipo de entidades</label>
+    <label class="texto_labels" style="margin-top:10px;">{{vm.language.strings.ListaTipoEntidades}}</label>
     <input type="text" ng-model="vm.filter" class="a_input" />
     <ul class="a_listado" style="width:100%;">
         <li ng-repeat="tipo in vm.lista | filter: vm.filter">
